# citadel-automatch-source

./: .gitignore  .travis.yml  CMakeLists.txt  DESIGN.md  README.md
data/: citadel-automatch.vdf
include/: curl.h  igame.h  match.h  match_picker.h  plugin.h  queue.h  requests.h  steam_id.h  utils.h
include/citadel/: client.h  iclient.h
src/: CMakeLists.txt  curl.cpp  match.cpp  match_picker.cpp  plugin.cpp  requests.cpp  steam_id.cpp  test.cpp  utils.cpp
src/citadel/: client.cpp
test/: CMakeLists.txt  match_test.cpp  mocks.h  utils_test.cpp
test/mocks/: citadel_client.cpp  citadel_client.h  game.cpp  game.h
